# email_suggestions

./: Cargo.toml
email_suggestions/: Cargo.toml
email_suggestions/src/: email_suggestion.rs  lib.rs
email_suggestions_wasm/: Cargo.toml
email_suggestions_wasm/src/: lib.rs
src/: email_suggestion.rs  lib.rs
tests/: lib.rs
